
[package]
name = "pqc-distro-os"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A distributed, post-quantum secure operating system with unified memory hierarchy"
repository = "https://github.com/yourusername/pqc-distro-os"
license = "MIT"

[dependencies]
# Cryptography
sha3 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
zeroize = "1.6"

# Post-Quantum Cryptography (via liboqs)
oqs = { version = "0.11", default-features = false, features = ["kyber", "dilithium", "std", "vendored"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Networking
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec"] }

# Data structures
parking_lot = "0.12"
dashmap = "5.5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
